--- a/public/locales/en/en.json
+++ b/public/locales/en/en.json
@@ -3,5 +3,5 @@
   "navbar.products": "Products",
   "navbar.gallery": "Gallery",
   "navbar.contact": "Contact us",
-  "home.h1" : "Peanut"
+  "home.h1" : "This is product page uhh"
 }
