--- a/public/locales/ru/ru.json
+++ b/public/locales/ru/ru.json
@@ -3,6 +3,6 @@
   "navbar.products": "Продукты",
   "navbar.gallery": "Галерея",
   "navbar.contact": "Свяжитесь с нами",
-   "home.h1" : "Arakhis"
+   "home.h1" : "Это страница продукта"
 
 }
