--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -9,5 +9,6 @@
 
   "ourProductA": "Peanut dragee",
   "ourProductB": "Crispy dragee",
-  "ourProductC": "Chocolate dragee"
+  "ourProductC": "Chocolate dragee",
+  "ourStory":"Our Story Begins"
 }
