--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -7,5 +7,8 @@
 
    "ourProductA":"Арахисовая конфета",
     "ourProductB": "Хрустящая конфета",
-    "ourProductC": "Шоколадная конфета"
+    "ourProductC": "Шоколадная конфета",
+
+      "ourStory": "Наша история начинается..."
+
 }
