--- a/public/locales/tu/common.json
+++ b/public/locales/tu/common.json
@@ -8,5 +8,8 @@
 
   "ourProductA":"Badamly şeker",
   "ourProductB": "Çilinti şeker",
-  "ourProductC": "Kakaoly şeker"
+  "ourProductC": "Kakaoly şeker",
+
+    "ourStory": "Hikayemiz başlar..."
+
 }
