--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -10,5 +10,10 @@
   "ourProductA": "Peanut dragee",
   "ourProductB": "Crispy dragee",
   "ourProductC": "Chocolate dragee",
-  "ourStory":"Our Story Begins"
+  "ourStory":"Our Story Begins",
+  "visionH1": "Vision",
+    "missionH1": "Mission",
+      "galleryH1": "Gallery"
+
+
 }
