--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -9,6 +9,12 @@
     "ourProductB": "Хрустящая конфета",
     "ourProductC": "Шоколадная конфета",
 
-      "ourStory": "Наша история начинается..."
+      "ourStory": "Наша история начинается...",
+        "visionH1": "Видение",
+          "missionH1": "Миссия",
+            "galleryH1": "Галерея"
+
+
+
 
 }
