--- a/public/locales/tu/common.json
+++ b/public/locales/tu/common.json
@@ -10,6 +10,12 @@
   "ourProductB": "Çilinti şeker",
   "ourProductC": "Kakaoly şeker",
 
-    "ourStory": "Hikayemiz başlar..."
+    "ourStory": "Hikayemiz başlar...",
+      "visionH1": "Görüş",
+        "missionH1": "Миссия",
+          "galleryH1": "Galereýa"
+
+
+
 
 }
