--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -13,7 +13,9 @@
   "ourStory":"Our Story Begins",
   "visionH1": "Vision",
     "missionH1": "Mission",
-      "galleryH1": "Gallery"
+      "galleryH1": "Gallery",
+        "contactUs": "Contact Us"
+
 
 
 }
