--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -12,7 +12,9 @@
       "ourStory": "Наша история начинается...",
         "visionH1": "Видение",
           "missionH1": "Миссия",
-            "galleryH1": "Галерея"
+            "galleryH1": "Галерея",
+              "contactUs": "Свяжитесь с нами"
+
 
 
 
