--- a/public/locales/tu/common.json
+++ b/public/locales/tu/common.json
@@ -13,7 +13,9 @@
     "ourStory": "Hikayemiz başlar...",
       "visionH1": "Görüş",
         "missionH1": "Миссия",
-          "galleryH1": "Galereýa"
+          "galleryH1": "Galereýa",
+            "contactUs": "Biz bilen habarlaşyň"
+
 
 
 
