--- a/public/locales/tu/common.json
+++ b/public/locales/tu/common.json
@@ -14,9 +14,9 @@
       "visionH1": "Görüş",
         "missionH1": "Миссия",
           "galleryH1": "Galereýa",
-            "contactUs": "Biz bilen habarlaşyň"
-
-
+            "contactUs": "Biz bilen habarlaşyň",
+      "mini": "Miny",
+      "peanut" : "Ärimäk"
 
 
 
