--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -13,7 +13,9 @@
         "visionH1": "Видение",
           "missionH1": "Миссия",
             "galleryH1": "Галерея",
-              "contactUs": "Свяжитесь с нами"
+              "contactUs": "Свяжитесь с нами",
+              "mini": "Мини",
+          "peanut": "Арахис"
 
 
 
