--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -15,8 +15,17 @@
   "contactUs": "Contact Us",
   "mini": "mini",
   "peanut": "peanut",
+  "dragee": "dragee",
 
-  "peanutMainBody": " Discover the delicious world of Minis with our Mini Dragee featuring peanuts. These small, round confections are packed with flavor, combining the satisfying crunch of a candy shell with the rich, nutty goodness of peanuts.",
+  "gallery.yourEmail": "Your Email",
+  "gallery.yourMessage": "Your Message",
+  "gallery.send": "Send Message",
+
+  "langs.en": "English",
+  "langs.ru": "Russian",
+  "langs.tr": "Turkish",
+
+  "peanutMainBody": "Discover a delicious world with Minis' peanut-filled Mini Dragee. These small, round confections combine the satisfying crunch of a candy shell with the rich and enticing flavor of peanuts.",
 
   "ourStoryBody1": "Minis was born from a simple yet powerful idea: to create miniature delights that bring joy. Founded by a team of food enthusiasts, we've dedicated ourselves to crafting bite-sized treats that not only satisfy your taste buds but also brighten your day. Our journey began with the vision of redefining snacking. We sought to blend quality, creativity, and deliciousness, resulting in the birth of Minis Mini Dragee with Peanut. At Minis, we're unwavering in our commitment to excellence. We use top-notch ingredients like whole peanuts, enrobed in a variety of candy coatings. This meticulous approach creates snacks that are not only delicious but also visually enticing.",
 
@@ -32,7 +41,7 @@
 
   "chocolateDragee": "Step into a world of sweetness with our Chocolate Dragee. These bite-sized delights feature a delectable chocolate center, encased in a crisp candy shell. Each piece is a burst of rich, creamy chocolate flavor that will transport your taste buds to a world of pure delight. Savor the moment with our Chocolate Dragee and experience a miniature masterpiece that's all about indulgence.",
 
-  "peanutDragee": "For nut lovers, our Peanut Dragee is a true treasure. These mini marvels feature whole peanuts, enveloped in a vibrant candy coating. The contrast between the sweet candy shell and the hearty peanut inside creates a satisfying crunch and a nutty goodness that's hard to resist. Give in to your nutty cravings with our Peanut Dragee and enjoy a delightful snack that's both wholesome and delicious.",
+  "peanutDragee": "For peanut enthusiasts, our Peanut Dragee is a true treasure. These mini marvels feature whole peanuts, enveloped in a vibrant candy coating. The contrast between the sweet candy shell and the hearty peanut inside creates a satisfying crunch and a peanut goodness that's hard to resist. Give in to your peanut cravings with our Peanut Dragee and enjoy a delightful snack that's both wholesome and delicious.",
 
   "galleryBody": "Explore our gallery to feast your eyes on a spectrum of colorful, delectable creations. From our vibrant candy-coated dragees to the luscious chocolate delights, each image tells a story of the joy we bring to snacking. Discover the artistry and delight in every miniature masterpiece.",
 
