--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -3,22 +3,49 @@
   "navbar.products": "Продукты",
   "navbar.gallery": "Галерея",
   "navbar.contact": "Свяжитесь с нами",
-   "home.h1" : "Arakhis",
+  "home.h1": "Арахис",
 
-   "ourProductA":"Арахисовая конфета",
-    "ourProductB": "Хрустящая конфета",
-    "ourProductC": "Шоколадная конфета",
+  "ourProductA": "Арахисовый драже",
+  "ourProductB": "Хрустящее драже",
+  "ourProductC": "Шоколадное драже",
+  "ourStory": "Начало нашей истории",
+  "visionH1": "Визия",
+  "missionH1": "Миссия",
+  "galleryH1": "Галерея",
+  "contactUs": "Свяжитесь с нами",
+  "mini": "мини",
+  "peanut": "арахис",
+  "dragee": "драже",
 
-      "ourStory": "Наша история начинается...",
-        "visionH1": "Видение",
-          "missionH1": "Миссия",
-            "galleryH1": "Галерея",
-              "contactUs": "Свяжитесь с нами",
-              "mini": "Мини",
-          "peanut": "Арахис"
+  "gallery.yourEmail": "Ваш E-mail",
+  "gallery.yourMessage": "Ваше сообщение",
+  "gallery.send": "Отправить сообщение",
 
+  "langs.en": "Английский",
+  "langs.ru": "Русский",
+  "langs.tr": "Турецкий",
 
+  "peanutMainBody": "Откройте вкусный мир Minis с нашим мини-драже с арахисом. Эти маленькие, круглые лакомства полны вкуса и сочетают в себе удовлетворяющий хруст слащавой оболочки и богатства арахиса.",
 
+  "ourStoryBody1": "Minis родилась из простой, но мощной идеи: создать миниатюрные удовольствия, приносящие радость. Основанная командой энтузиастов в области еды, мы посвятили себя созданию угощений в миниатюре, которые не только удовлетворяют ваши вкусовые рецепторы, но и делают ваш день ярче. Наше путешествие началось с визией переосмысления закусок. Мы стремились соединить в себе качество, креативность и вкус, и это привело к рождению Mini Dragee с арахисом от Minis. В Minis мы непоколебимо привержены качеству. Мы используем первоклассные ингредиенты, такие как цельные арахисы, покрытые разнообразными слоями конфет. Этот скрупулезный подход создает закуски, которые не только вкусные, но и зрелищные.",
 
+  "ourStoryBody2": "Наша страсть к созданию этих маленьких чудес сделала Minis символом качества и инноваций в индустрии закусок. Мы продолжаем расширять наш ассортимент, предлагая вам миниатюрные, великолепные и запоминающиеся впечатления. Наслаждаясь Mini Dragee с арахисом от Minis, вы наслаждаетесь частью нашей страсти. Присоединяйтесь к нам в этом восхитительном путешествии, будь то для вас самих или в кругу близких. Спасибо, что стали частью нашей истории. Мы с нетерпением ждем продолжения радости Minis, один укус за разом.",
 
+  "visionBody1": "В Minis мы стремимся превратить перекусывание в полное радости переживание. Нашей целью является быть первым выбором для тех, кто ищет качество, вкус и удовольствие в закусках. Присоединяйтесь к нам в нашем путешествии по переопределению перекусывания, одно творение Minis за раз.",
+
+  "visionBody2": "Спасибо, что стали частью нашей вкусной мечты.",
+
+  "missionBody1": "Minis находится в миссии революционизации перекусывания. Наша цель - внести радость и волнение в каждый момент перекусывания. Мы посвятили себя созданию миниатюрных удовольствий, которые поднимают ваши повседневные переживания. Наша миссия - постоянно расширять границы инноваций в сфере перекусывания, представляя новые вкусы, текстуры и ощущения, которые удивляют и удовлетворяют. Мы стремимся устанавливать стандарт того, что считается миниатюрным, великолепным и запоминающимся в мире перекусывания.",
+
+  "missionBody2": "Мы стремимся быть вашим первым выбором для закусок, которые идеально сочетают в себе качество, вкус и удовольствие. В Minis наша миссия - сделать перекусывание источником радости для всех, и мы приглашаем вас присоединиться к нам в этом вкусном путешествии. Спасибо, что стали частью нашей миссии по переопределению перекусывания, одно творение Minis за раз.",
+
+  "crispyDragee": "Откройте для себя Crispy Dragee - закуску, которая предлагает идеальный укус. Каждый кусочек - это мини-шедевр хрупкости с ломающейся сладкой оболочкой, которая раскрывает восхитительный сюрприз внутри. Это уникальное сочетание хрустящего удовлетворения и сладкого изыска. Попробуйте Crispy Dragee и ощутите радость перекусывания во всей ее красе.",
+
+  "chocolateDragee": "Погрузитесь в мир сладостей с нашим Chocolate Dragee. Эти миниатюрные удовольствия имеют восхитительное шоколадное ядро, обернутое в хрупкую сладкую оболочку. Каждый кусочек - это всплеск богатого, кремового вкуса шоколада, который перенесет ваши вкусовые рецепторы в мир чистой радости. Наслаждайтесь моментом с нашим Chocolate Dragee и переживите миниатюрный шедевр, который посвящен исключительно наслаждению.",
+
+  "peanutDragee": "Для ценителей арахиса наш Peanut Dragee - настоящее сокровище. Эти мини-чудеса представляют собой целый арахис, обернутый в яркую конфетную оболочку. Контраст между сладкой конфетной оболочкой и сытным арахисом внутри создает удовлетворительное хрустящее удовольствие и арахисное блаженство, от которого трудно устоять. Поддайтесь своим арахисным желаниям с нашим Peanut Dragee и наслаждайтесь вкусным перекусом, который одновременно полезен и вкусен.",
+
+  "galleryBody": "Исследуйте нашу галерею, чтобы насладиться разноцветными и вкусными творениями. От ярких конфетных драже до восхитительных шоколадных удовольствий, каждое изображение рассказывает историю радости, которую мы приносим в мир перекусывания. Откройте для себя художественное мастерство и радость в каждом миниатюрном шедевре.",
+
+  "contactBody": "Свяжитесь с нами, и наша команда всегда здесь, чтобы помочь. Ваши мысли важны, и мы здесь, чтобы обеспечить, чтобы ваш опыт с нами был так же радостным, как наши закуски. Свяжитесься с нами сегодня!"
 }
