--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -13,7 +13,7 @@
   "missionH1": "Mission",
   "galleryH1": "Gallery",
   "contactUs": "Contact Us",
-  "mini": "mini",
+  "mini": "Mini's",
   "peanut": "peanut",
   "dragee": "dragee",
 
