--- a/public/locales/tr/common.json
+++ b/public/locales/tr/common.json
@@ -13,7 +13,7 @@
   "missionH1": "Misyon",
   "galleryH1": "Galeri",
   "contactUs": "Bize Ulaşın",
-  "mini": "mini",
+  "mini": "Mini's",
   "peanut": "fıstık",
   "dragee": "draje",
 
@@ -25,11 +25,11 @@
   "langs.ru": "Rusça",
   "langs.tr": "Türkçe",
 
-  "peanutMainBody": "Minis'in yer fıstık dolgulu Mini Drajesi ile lezzetli bir dünyayı keşfedin. Bu küçük, yuvarlak tatlılar, tatlı kabuğun doyurucu çıtırtısı ile yer fıstığınin zengin ve cezbedici tadını bir araya getiriyor.",
+  "peanutMainBody": "Minis'in yer fıstıklı drajesi ile lezzetli bir dünyayı keşfedin. Bu küçük, yuvarlak tatlılar, tatlı kabuğun doyurucu çıtırtısı ile yer fıstığınin zengin ve cezbedici tadını bir araya getiriyor.",
 
-  "ourStoryBody1": "Minis, sevinci getiren minyatür lezzetler yaratma fikriyle doğdu. Yiyecek tutkunu bir ekip tarafından kurulan Minis, damak tadınızı tatmin etmekle kalmayıp gününüzü aydınlatan atıştırmalıklar üretmeye adanmıştır. Yolculuğumuz, atıştırmalıkları yeniden tanımlama vizyonuyla başladı. Kalite, yaratıcılık ve lezzeti harmanlamayı hedefledik ve Minis Mini Fıstıklı Draje'nin doğmasına yol açtı. Minis olarak mükemmeliyete olan bağlılığımız sarsılmaz. En iyi malzemeleri kullanıyoruz ve bunlar arasında tam fıstık, çeşitli şeker kaplamalarında bulunur. Bu titiz yaklaşım, sadece lezzetli değil, aynı zamanda görsel olarak çekici atıştırmalıklar yaratır.",
+  "ourStoryBody1": "Minis, sevinci getiren minyatür lezzetler yaratma fikriyle doğdu. Yiyecek tutkunu bir ekip tarafından kurulan Minis, damak tadınızı tatmin etmekle kalmayıp gününüzü aydınlatan atıştırmalıklar üretmeye adanmıştır. Yolculuğumuz, atıştırmalıkları yeniden tanımlama vizyonuyla başladı. Kalite, yaratıcılık ve lezzeti harmanlamayı hedefledik ve Minis yer fıstıklı draje'nin doğmasına yol açtı. Minis olarak mükemmeliyete olan bağlılığımız sarsılmaz. En iyi malzemeleri kullanıyoruz ve bunlar arasında tam fıstık, çeşitli şeker kaplamalarında bulunur. Bu titiz yaklaşım, sadece lezzetli değil, aynı zamanda görsel olarak çekici atıştırmalıklar yaratır.",
 
-  "ourStoryBody2": "Bu küçük harikaları hazırlarkenki tutkumuz, Minis'i atıştırmalık endüstrisinde kalite ve yenilik sembolü haline getirdi. Minis Mini Fıstıklı Draje'nin tadını çıkarırken, kendi tutkumuzun bir parçasını tadıyorsunuz. Siz kendinizi şımartırken veya sevdiklerinizle paylaşırken bize katılın. Hikayemizin bir parçası olduğunuz için teşekkür ederiz. Sizlere Minis'in neşesini her lokmayla getirmeye devam etmek için sabırsızlanıyoruz.",
+  "ourStoryBody2": "Bu küçük harikaları hazırlarkenki tutkumuz, Minis'i atıştırmalık endüstrisinde kalite ve yenilik sembolü haline getirdi. Minis yer fıstıklı draje'nin tadını çıkarırken, kendi tutkumuzun bir parçasını tadıyorsunuz. Siz kendinizi şımartırken veya sevdiklerinizle paylaşırken bize katılın. Hikayemizin bir parçası olduğunuz için teşekkür ederiz. Sizlere Minis'in neşesini her lokmayla getirmeye devam etmek için sabırsızlanıyoruz.",
 
   "visionBody1": "Minis olarak, atıştırmalıkları sevinç dolu bir deneyime dönüştürmeye adanmışız. Vizyonumuz, sizi şaşırtan ve memnun eden olağanüstü, minyatür lezzetler yaratmada yol gösterici olmaktır. Atıştırmalık arayanlar için kalite, lezzet ve eğlence arayanlar için ilk tercih olmayı amaçlıyoruz. Bize katılın, atıştırmalıkları yeniden tanımlama yolculuğumuzda. Teşekkür ederiz ki, bu lezzetli rüyanın bir parçası oluyorsunuz.",
 
