--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -13,7 +13,7 @@
   "missionH1": "Миссия",
   "galleryH1": "Галерея",
   "contactUs": "Свяжитесь с нами",
-  "mini": "мини",
+  "mini": "Мини'с",
   "peanut": "арахис",
   "dragee": "драже",
 
