--- a/public/locales/en/common.json
+++ b/public/locales/en/common.json
@@ -45,5 +45,8 @@
 
   "galleryBody": "Explore our gallery to feast your eyes on a spectrum of colorful, delectable creations. From our vibrant candy-coated dragees to the luscious chocolate delights, each image tells a story of the joy we bring to snacking. Discover the artistry and delight in every miniature masterpiece.",
 
-  "contactBody": "We'd love to hear from you. Get in touch with us, and our friendly team will be here to assist you. Your thoughts matter, and we're here to ensure your experience with us is as delightful as our snacks. Contact us today!"
+  "contactBody": "We'd love to hear from you. Get in touch with us, and our friendly team will be here to assist you. Your thoughts matter, and we're here to ensure your experience with us is as delightful as our snacks. Contact us today!",
+
+  "readMore": "Read More",
+  "readLess": "Collapse"
 }
