--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -41,11 +41,14 @@
 
   "crispyDragee": "Откройте для себя Crispy Dragee - закуску, которая предлагает идеальный укус. Каждый кусочек - это мини-шедевр хрупкости с ломающейся сладкой оболочкой, которая раскрывает восхитительный сюрприз внутри. Это уникальное сочетание хрустящего удовлетворения и сладкого изыска. Попробуйте Crispy Dragee и ощутите радость перекусывания во всей ее красе.",
 
-  "chocolateDragee": "Погрузитесь в мир сладостей с нашим Chocolate Dragee. Эти миниатюрные удовольствия имеют восхитительное шоколадное ядро, обернутое в хрупкую сладкую оболочку. Каждый кусочек - это всплеск богатого, кремового вкуса шоколада, который перенесет ваши вкусовые рецепторы в мир чистой радости. Наслаждайтесь моментом с нашим Chocolate Dragee и переживите миниатюрный шедевр, который посвящен исключительно наслаждению.",
+  "chocolateDragee": "Погрузитесь в мир сладостей с нашим Chocolate Dragee. Эти миниатюрные удовольствия имеют восхитительное шоколадное ядро, обернутое в хрупкую сладкую оболочку. Каждый кусочек - это всплеск богатого, кремового вкуса шоколада, который перенесет ваши вкусовые рецепторы в мир чистой радости.",
 
-  "peanutDragee": "Для ценителей арахиса наш Peanut Dragee - настоящее сокровище. Эти мини-чудеса представляют собой целый арахис, обернутый в яркую конфетную оболочку. Контраст между сладкой конфетной оболочкой и сытным арахисом внутри создает удовлетворительное хрустящее удовольствие и арахисное блаженство, от которого трудно устоять. Поддайтесь своим арахисным желаниям с нашим Peanut Dragee и наслаждайтесь вкусным перекусом, который одновременно полезен и вкусен.",
+  "peanutDragee": "Для ценителей арахиса наш Peanut Dragee - настоящее сокровище. Эти мини-чудеса представляют собой целый арахис, обернутый в яркую конфетную оболочку. Контраст между сладкой конфетной оболочкой и сытным арахисом внутри создает удовлетворительное хрустящее удовольствие и арахисное блаженство, от которого трудно устоять.",
 
   "galleryBody": "Исследуйте нашу галерею, чтобы насладиться разноцветными и вкусными творениями. От ярких конфетных драже до восхитительных шоколадных удовольствий, каждое изображение рассказывает историю радости, которую мы приносим в мир перекусывания. Откройте для себя художественное мастерство и радость в каждом миниатюрном шедевре.",
 
-  "contactBody": "Свяжитесь с нами, и наша команда всегда здесь, чтобы помочь. Ваши мысли важны, и мы здесь, чтобы обеспечить, чтобы ваш опыт с нами был так же радостным, как наши закуски. Свяжитесься с нами сегодня!"
+  "contactBody": "Свяжитесь с нами, и наша команда всегда здесь, чтобы помочь. Ваши мысли важны, и мы здесь, чтобы обеспечить, чтобы ваш опыт с нами был так же радостным, как наши закуски. Свяжитесься с нами сегодня!",
+
+  "readMore": "Читать далее",
+  "readLess": "Свернуть"
 }
