--- a/public/locales/tr/common.json
+++ b/public/locales/tr/common.json
@@ -47,5 +47,8 @@
 
   "galleryBody": "Gözlerinizi renkli, leziz yaratıkların bir yelpazesine daldırmak için galerimizi keşfedin. Canlı şeker kaplamalı drajelerimizden lezzetli çikolata harikalarına kadar her resim, atıştırmalıklara getirdiğimiz neşenin hikayesini anlatıyor. Her minyatür başyapıtta sanat ve neşenin tadını çıkarın.",
 
-  "contactBody": "Bizimle iletişime geçin, ekibimiz size yardımcı olacaktır. Düşünceleriniz önemlidir ve sizinle deneyiminizi atıştırmalıklarımız kadar neşeli hale getirmek için buradayız. Bugün bizimle iletişime geçin!"
+  "contactBody": "Bizimle iletişime geçin, ekibimiz size yardımcı olacaktır. Düşünceleriniz önemlidir ve sizinle deneyiminizi atıştırmalıklarımız kadar neşeli hale getirmek için buradayız. Bugün bizimle iletişime geçin!",
+
+  "readMore": "Daha Fazla Oku",
+  "readLess": "Daralt"
 }
