--- a/public/locales/ru/common.json
+++ b/public/locales/ru/common.json
@@ -3,7 +3,9 @@
   "navbar.products": "Продукты",
   "navbar.gallery": "Галерея",
   "navbar.contact": "Свяжитесь с нами",
-  "home.h1": "Арахис",
+  "home.h1-1": "Арахис",
+  "home.h1-2": "Шоколад",
+  "home.h1-3": "Хруст",
 
   "ourProductA": "Арахисовый драже",
   "ourProductB": "Хрустящее драже",
@@ -25,7 +27,9 @@
   "langs.ru": "Русский",
   "langs.tr": "Турецкий",
 
-  "peanutMainBody": "Откройте вкусный мир Minis с нашим мини-драже с арахисом. Эти маленькие, круглые лакомства полны вкуса и сочетают в себе удовлетворяющий хруст слащавой оболочки и богатства арахиса.",
+  "homeMainBody-1": "Откройте вкусный мир Minis с нашим мини-драже с арахисом. Эти маленькие, круглые лакомства полны вкуса и сочетают в себе удовлетворяющий хруст слащавой оболочки и богатства арахиса.",
+  "homeMainBody-2": "Исследуйте мир наслаждений с шоколадным мини-драже Minis. Каждый кусочек - это восхитительное сочетание гладкого, кремового шоколада в хрустящей сладкой оболочке, предлагающей симфонию текстур и богатых вкусов, возбуждающих вкусовые рецепторы",
+  "homeMainBody-3": "Погрузитесь в хрустящее удовольствие с мини-драже Crispy от Minis. Эти маленькие угощения обладают легкой, воздушной хрусткостью, покрытой глянцевой сладкой оболочкой. Идеальное сочетание легкости и сладости делает их непреодолимым угощением на любой случай.",
 
   "ourStoryBody1": "Minis родилась из простой, но мощной идеи: создать миниатюрные удовольствия, приносящие радость. Основанная командой энтузиастов в области еды, мы посвятили себя созданию угощений в миниатюре, которые не только удовлетворяют ваши вкусовые рецепторы, но и делают ваш день ярче. Наше путешествие началось с визией переосмысления закусок. Мы стремились соединить в себе качество, креативность и вкус, и это привело к рождению Mini Dragee с арахисом от Minis. В Minis мы непоколебимо привержены качеству. Мы используем первоклассные ингредиенты, такие как цельные арахисы, покрытые разнообразными слоями конфет. Этот скрупулезный подход создает закуски, которые не только вкусные, но и зрелищные.",
 
