--- a/public/locales/tr/common.json
+++ b/public/locales/tr/common.json
@@ -3,7 +3,9 @@
   "navbar.products": "Ürünler",
   "navbar.gallery": "Galeri",
   "navbar.contact": "Bize Ulaşın",
-  "home.h1": "Fıstık",
+  "home.h1-1": "Fıstık  ",
+  "home.h1-2": "Çikolata",
+  "home.h1-3": "Gevrek",
 
   "ourProductA": "Fıstık draje",
   "ourProductB": "Çıtır draje",
@@ -25,7 +27,9 @@
   "langs.ru": "Rusça",
   "langs.tr": "Türkçe",
 
-  "peanutMainBody": "Minis'in yer fıstıklı drajesi ile lezzetli bir dünyayı keşfedin. Bu küçük, yuvarlak tatlılar, tatlı kabuğun doyurucu çıtırtısı ile yer fıstığınin zengin ve cezbedici tadını bir araya getiriyor.",
+  "homeMainBody-1": "Minis'in yer fıstıklı drajesi ile lezzetli bir dünyayı keşfedin. Bu küçük, yuvarlak tatlılar, tatlı kabuğun doyurucu çıtırtısı ile yer fıstığınin zengin ve cezbedici tadını bir araya getiriyor.",
+  "homeMainBody-2": "Minis'in Çikolatalı Mini Draje'nin şımartıcı evrenini keşfedin. Her parça, pürüzsüz, kremsi çikolatanın çıtır bir şeker kabuğu ile kaplandığı harika bir karışım, damağı tatmin eden zengin tatlar ve dokuların bir senfonisini sunar",
+  "homeMainBody-3": "Minis'in Gevrek Mini Draje'nin çıtır zevkine dalın. Bu lokmalık lezzetler, parlak bir şeker kaplamasıyla sarılmış hafif, havalı bir gevrekliğe sahiptir. Hafiflik ve tatlılığın mükemmel uyumu, onları herhangi bir durum için karşı konulmaz bir atıştırmalık yapar.",
 
   "ourStoryBody1": "Minis, sevinci getiren minyatür lezzetler yaratma fikriyle doğdu. Yiyecek tutkunu bir ekip tarafından kurulan Minis, damak tadınızı tatmin etmekle kalmayıp gününüzü aydınlatan atıştırmalıklar üretmeye adanmıştır. Yolculuğumuz, atıştırmalıkları yeniden tanımlama vizyonuyla başladı. Kalite, yaratıcılık ve lezzeti harmanlamayı hedefledik ve Minis yer fıstıklı draje'nin doğmasına yol açtı. Minis olarak mükemmeliyete olan bağlılığımız sarsılmaz. En iyi malzemeleri kullanıyoruz ve bunlar arasında tam fıstık, çeşitli şeker kaplamalarında bulunur. Bu titiz yaklaşım, sadece lezzetli değil, aynı zamanda görsel olarak çekici atıştırmalıklar yaratır.",
 
